--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "11.2.6",
+    "lottie-react": "^2.4.1",
     "next": "^14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1"
