--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "cloudinary": "^2.8.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "11.2.6",
     "lottie-react": "^2.4.1",
+    "mongodb": "^6.20.0",
     "next": "^14.2.32",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "20.14.9",
